# api/tree/v1/tree.pb.validate.go
@@ -1,0 +1,241 @@
+// Code generated by protoc-gen-validate. DO NOT EDIT.
+// source: api/tree/v1/tree.proto
+
+package v1
+
+import (
+	"bytes"
+	"errors"
+	"fmt"
+	"net"
+	"net/mail"
+	"net/url"
+	"regexp"
+	"sort"
+	"strings"
+	"time"
+	"unicode/utf8"
+
+	"google.golang.org/protobuf/types/known/anypb"
+)
+
+// ensure the imports are used
+var (
+	_ = bytes.MinRead
+	_ = errors.New("")
+	_ = fmt.Print
+	_ = utf8.UTFMax
+	_ = (*regexp.Regexp)(nil)
+	_ = (*strings.Reader)(nil)
+	_ = net.IPv4len
+	_ = time.Duration(0)
+	_ = (*url.URL)(nil)
+	_ = (*mail.Address)(nil)
+	_ = anypb.Any{}
+	_ = sort.Sort
+)
+
+// Validate checks the field values on GetTreeRequest with the rules defined in
+// the proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *GetTreeRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on GetTreeRequest with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in GetTreeRequestMultiError,
+// or nil if none found.
+func (m *GetTreeRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *GetTreeRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Id
+
+	if len(errors) > 0 {
+		return GetTreeRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// GetTreeRequestMultiError is an error wrapping multiple validation errors
+// returned by GetTreeRequest.ValidateAll() if the designated constraints
+// aren't met.
+type GetTreeRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m GetTreeRequestMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m GetTreeRequestMultiError) AllErrors() []error { return m }
+
+// GetTreeRequestValidationError is the validation error returned by
+// GetTreeRequest.Validate if the designated constraints aren't met.
+type GetTreeRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e GetTreeRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e GetTreeRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e GetTreeRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e GetTreeRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e GetTreeRequestValidationError) ErrorName() string { return "GetTreeRequestValidationError" }
+
+// Error satisfies the builtin error interface
+func (e GetTreeRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sGetTreeRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = GetTreeRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = GetTreeRequestValidationError{}
+
+// Validate checks the field values on GetTreeReply with the rules defined in
+// the proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *GetTreeReply) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on GetTreeReply with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in GetTreeReplyMultiError, or
+// nil if none found.
+func (m *GetTreeReply) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *GetTreeReply) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Id
+
+	// no validation rules for Tree
+
+	if len(errors) > 0 {
+		return GetTreeReplyMultiError(errors)
+	}
+
+	return nil
+}
+
+// GetTreeReplyMultiError is an error wrapping multiple validation errors
+// returned by GetTreeReply.ValidateAll() if the designated constraints aren't met.
+type GetTreeReplyMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m GetTreeReplyMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m GetTreeReplyMultiError) AllErrors() []error { return m }
+
+// GetTreeReplyValidationError is the validation error returned by
+// GetTreeReply.Validate if the designated constraints aren't met.
+type GetTreeReplyValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e GetTreeReplyValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e GetTreeReplyValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e GetTreeReplyValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e GetTreeReplyValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e GetTreeReplyValidationError) ErrorName() string { return "GetTreeReplyValidationError" }
+
+// Error satisfies the builtin error interface
+func (e GetTreeReplyValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sGetTreeReply.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = GetTreeReplyValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = GetTreeReplyValidationError{}
